edge/kubernetes/2-traefik-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: mmfb
  name: traefik
  labels:
    app: traefik
spec:
  ports:
    - protocol: TCP
      name: web
      port: 8000
      targetPort: 8000
    - protocol: TCP
      name: admin
      port: 8080
      targetPort: 8080
    - protocol: TCP
      name: websecure
      port: 4443
      targetPort: 4443
  selector:
      app: traefik
status:
  loadBalancer: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: mmfb
  name: traefik-deploy
  labels:
    app: traefik-deploy
    traefik.enable: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: traefik
    spec:
      serviceAccountName: traefik-ingress-controller
      containers:
        - name: traefik
          image: traefik:v2.3
          args:
            - --api.insecure
            - --accesslog
            - --log.level=DEBUG
            - --api.dashboard=true
            - --entrypoints.web.Address=:8000
            - --entrypoints.websecure.Address=:4443
            - --providers.file.directory=/traefik
            - --providers.file.watch=true            
            - --providers.kubernetescrd
          volumeMounts:
            - name: config 
              mountPath: /traefik                          
          ports:
            - name: web
              containerPort: 8000
            - name: websecure
              containerPort: 4443
            - name: admin
              containerPort: 8080  
      volumes:
        - name: config
          configMap:
            name: config-data
status: {}

apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-admin-route
  namespace: mmfb
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`traefik.mmfb.kareegor.com`)
      kind: Rule
      services:
        - name: traefik
          namespace: mmfb
          port: 8080
  tls:
    secretName: secret-tls
