edge/kubernetes/5-consul-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    app: consul-leader 
  labels:
    app: consul-leader
  name: consul-leader
  namespace: mmfb
spec:
  ports:
  - name: "8300"
    port: 8300
    targetPort: 8300
  - name: "8500"
    port: 8500
    targetPort: 8500
  - name: "8600"
    port: 8600
    targetPort: 8600
  selector:
    app: consul-leader
status:
  loadBalancer: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    app: consul-leader
  name: consul-leader
  labels:
    app: consul-leader
spec:
  replicas: 1
  selector:
    matchLabels:
      app: consul-leader
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        app: consul-leader
      labels:
        app: consul-leader
    spec:
      containers:
      - args:
        - agent
        - -server
        - -bootstrap
        - -ui
        - -dev
        - -client
        - 0.0.0.0
        image: consul
        imagePullPolicy: ""
        name: consul-leader
        resources: {}
        volumeMounts:
        - mountPath: /consul/data
          name: consul-data-leader
        securityContext:
          privileged: true  
      restartPolicy: Always
      serviceAccountName: "traefik-ingress-controller"
      volumes:
      - name: consul-data-leader
        persistentVolumeClaim:
          claimName: consul-data-leader
status: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    app: consul-replica
  creationTimestamp: null
  labels:
    app: consul-replica
  name: consul-replica
spec:
  replicas: 2
  selector:
    matchLabels:
      app: consul-replica
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        app: consul-replica
      creationTimestamp: null
      labels:
        app: consul-replica
    spec:
      containers:
      - args:
        - agent
        - -server
        - -client=0.0.0.0
        - -retry-join=consul-leader
        image: consul
        imagePullPolicy: ""
        name: consul-replica
        resources: {}
        volumeMounts:
        - mountPath: /consul/data
          name: consul-data-replica
        securityContext:
          privileged: true   
      restartPolicy: Always
      serviceAccountName: "traefik-ingress-controller"
      volumes:
      - name: consul-data-replica
        persistentVolumeClaim:
          claimName: consul-data-replica
status: {}
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: consul-route
  namespace: mmfb
spec:
  entryPoints:
      - websecure
  routes:
      - match: Host(`consul.mmfb.kareegor.com`)
        kind: Rule
        services:
          - name: consul-leader
            port: 8500
  tls:
    -secretName: secret-tls
